fix z-index

--- a/apps/the-dream-book-frontend/.vitepress/theme/style.css
+++ b/apps/the-dream-book-frontend/.vitepress/theme/style.css
@@ -218,5 +218,5 @@ button:disabled {
   position: fixed;
   top: 1rem;
   right: 1rem;
-  z-index: 1;
+  z-index: 10;
 }
